--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -61,6 +61,9 @@ format = '[[ $symbol $branch ](fg:#769ff0 bg:#1d2230)]($style)'
 [git_status]
 style = "bg:#1d2230"
 format = '[[($all_status$ahead_behind )](fg:#769ff0 bg:#1d2230)]($style)'
+ahead = "↑${count}"
+behind = "↓${count}"
+diverged = "↑${ahead_count}↓${behind_count}"
 
 [cmd_duration]
 min_time = 1
@@ -75,4 +78,3 @@ format = '[[   $time ](fg:#a0a9cb)]($style)'
 
 [character]
 vimcmd_symbol = '[V](bold green) '
-
