refactor: Enhance git log command with color and formatting options

--- a/lazygit/config.yml
+++ b/lazygit/config.yml
@@ -17,6 +17,7 @@ keybinding:
     commitChangesWithEditor: <disabled>
 # log customize
 git:
+  logCmd: "git log --graph --color=always --pretty='%Cred%h%Creset -%C(auto)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --"
   branchLogCmd: "git log --graph --color=always --pretty='%Cred%h%Creset -%C(auto)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' {{branchName}} --"
   pagers:
     - colorArg: always
